fix bug: modify homepage layout to make it look nice on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ form {
 
 /* Center the content vertically and horizontally */
 .centered-content {
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
